# xrtrader

./: .gitignore  CMakeLists.txt  README.md
doc/: data_store.md  dev_plan.md
src/: log.h  main.cpp
src/data/: asset_fetcher.cpp  asset_fetcher.h  data_store.cpp  data_store.h  data_struct.h  quote_fetcher.cpp  quote_fetcher.h
